CSS, fix contrast issue, see: #32146

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -2758,14 +2758,14 @@ output {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(129, 152, 183, 0.6);
 }
 .form-control::-moz-placeholder {
-  color: #7c7c7c;
+  color: #6f6f6f;
   opacity: 1;
 }
 .form-control:-ms-input-placeholder {
-  color: #7c7c7c;
+  color: #6f6f6f;
 }
 .form-control::-webkit-input-placeholder {
-  color: #7c7c7c;
+  color: #6f6f6f;
 }
 .form-control::-ms-expand {
   background-color: transparent;
@@ -7127,7 +7127,7 @@ button.close {
 }
 .il-card .caption dl dt {
   font-weight: normal;
-  color: #7c7c7c;
+  color: #6f6f6f;
   padding-top: 6px;
 }
 .il-card .il-card-repository-head {
@@ -7740,7 +7740,7 @@ ul.dropdown-menu > li > .btn:focus {
 }
 .il-item .il-item-property-name {
   font-size: 12px;
-  color: #7c7c7c;
+  color: #6f6f6f;
   overflow: hidden;
 }
 .il-item .il-item-property-value {
@@ -8681,7 +8681,7 @@ fieldset[disabled] .il-table-presentation-viewcontrols .btn-default.engaged.focu
   border-color: rgba(0, 0, 0, 0.15);
 }
 .il-table-presentation-row .il-table-presentation-row-expanded .il-table-presentation-details .il-table-presentation-fields .il-item-property-name {
-  color: #7c7c7c;
+  color: #6f6f6f;
 }
 .il-table-data {
   display: table;
@@ -8872,7 +8872,7 @@ div.alert ul {
   background-color: #f9f9f9;
   padding: 6px 12px;
   font-size: 12px;
-  color: #7c7c7c;
+  color: #6f6f6f;
   list-style-type: none;
 }
 div.alert ul > li:before {
@@ -11924,7 +11924,7 @@ td {
 code {
   font-family: Pragmata, Menlo, 'DejaVu LGC Sans Mono', 'DejaVu Sans Mono', Consolas, 'Everson Mono', 'Lucida Console', 'Andale Mono', 'Nimbus Mono L', 'Liberation Mono', FreeMono, 'Osaka Monospaced', Courier, 'New Courier', monospace;
   font-size: 90%;
-  color: #7c7c7c;
+  color: #6f6f6f;
 }
 ::selection {
   background: #e2e8ef;
@@ -12605,7 +12605,7 @@ div.Access {
   font-weight: bold;
 }
 .light {
-  color: #7c7c7c;
+  color: #6f6f6f;
 }
 /* ----------------- normal links ------------- */
 a.light:link,
@@ -13538,7 +13538,7 @@ div.ilForumQuoteHead {
   }
 }
 div.ilFrmPostHeader span.small {
-  color: #7c7c7c;
+  color: #6f6f6f;
 }
 .ilFrmPostContentContainer {
   margin: 0 0 10px;
@@ -13740,7 +13740,7 @@ button.copg-add.dropdown-toggle.btn:hover .il-copg-add-text,
 }
 button.copg-add.dropdown-toggle.btn:hover {
   background-color: #e2e8ef;
-  color: #7c7c7c;
+  color: #6f6f6f;
 }
 [data-copg-ed-type='add-area'] ul.dropdown-menu {
   left: 45%;
@@ -13959,7 +13959,7 @@ div.il-copg-button-group-wide {
   margin: 0;
 }
 #iltinymenu .bd div .small {
-  color: #7c7c7c;
+  color: #6f6f6f;
   font-style: italic;
 }
 #iltinymenu .btn-default .mce-ico {
@@ -14349,7 +14349,7 @@ p#copg-auto-save {
 }
 .copg-new-content-placeholder {
   text-align: center;
-  color: #7c7c7c;
+  color: #6f6f6f;
   padding: 20px;
 }
 .il-copg-drag {
@@ -15626,7 +15626,7 @@ div.ilBlogListItemTitle h3 {
 }
 div.ilBlogListItemSubTitle {
   margin-top: 5px;
-  color: #7c7c7c;
+  color: #6f6f6f;
   font-size: 80%;
   text-align: right;
 }
@@ -15653,7 +15653,7 @@ td.ilBlogSideBlockContent {
 }
 td.ilBlogSideBlockCommand {
   font-size: 75%;
-  color: #7c7c7c;
+  color: #6f6f6f;
   border-bottom: 1px solid #dddddd;
   padding: 1px 3px;
   background-color: #f9f9f9;
@@ -15713,7 +15713,7 @@ div.ilSkill > h4 {
   margin: 10px 0;
   padding: 0;
   font-size: 1em;
-  color: #7c7c7c;
+  color: #6f6f6f;
   float: left;
   clear: left;
 }
@@ -15825,7 +15825,7 @@ th.ilSkillEntryHead {
 .ilPollDescription {
   margin: 5px;
   font-size: 80%;
-  color: #7c7c7c;
+  color: #6f6f6f;
 }
 .ilPollQuestion {
   display: inline-block;
@@ -16962,12 +16962,12 @@ h3.ilBlockHeader {
 /* possibly deprecated */
 .il_BlockInfo {
   font-size: 80%;
-  color: #7c7c7c;
+  color: #6f6f6f;
 }
 /* new class */
 div.ilBlockInfo {
   font-size: 75%;
-  color: #7c7c7c;
+  color: #6f6f6f;
   padding: 1px 3px;
   background-color: #f9f9f9;
   text-align: right;
@@ -16981,7 +16981,7 @@ div.ilBlockContent {
   border-bottom: 1px solid #f0f0f0;
 }
 div.ilBlockPropertyCaption {
-  color: #7c7c7c;
+  color: #6f6f6f;
 }
 /* Services/UIComponent/Lightbox */
 .ilLightbox {
@@ -17691,7 +17691,7 @@ div.ilChecklist ul li a:hover {
 }
 div.ilChecklist ul li p,
 div.ilChecklist ul li p:hover {
-  color: #7c7c7c;
+  color: #6f6f6f;
   font-size: 85%;
   text-decoration: none;
   padding: 0;
@@ -17932,7 +17932,7 @@ body.ilPrtfPdfBody .ilPCMyCoursesToggle img {
 }
 #awareness-content .ilHighlighted {
   background-color: #e2e8ef;
-  color: #7c7c7c;
+  color: #6f6f6f;
 }
 .ilAwrnBadgeHidden {
   visibility: hidden;
